@@ -2,6 +2,9 @@
 
 	* win/tkWinSend.c: [Bug 3076671] CVS HEAD Tk build fails on win32
 	with msys/mingw. Make it compile on older mingw as well.
+	* generic/tk.decls:   Add explicit scspec "EXTERN", as in Tcl
+	* generic/tkInt.decls:
+	* generic/tkStubInit.c: Don't let Tk_MainEx macro disturb compilation
 
 2010-09-23  Jan Nijtmans  <nijtmans@users.sf.net>
 
